--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -184,6 +184,8 @@
         "- jedna sala nie może być używana przez więcej niż jedną klasę w tym samym czasie\n",
         "- jedna klasa uczniowska nie może mieć dwóch zajęć jednocześnie\n",
         "\n",
+        "Niewykonalność scenariusza A wynika z założeń, że przedmiot A prowadzi tylko T1 oraz że mamy tylko 5 slotów lekcyjnych. Przy tych założeniach T1 może poprowadzić maksymalnie 5 lekcji A, a model wymaga 6.\n",
+        "\n",
         "Należałoby rozważyć:\n",
         "- identyfikowanie ukrytych założeń,\n",
         "- zadawanie pytań doprecyzowujących (może w formie chatu?),\n",
